@@ -24,9 +24,6 @@
 # define false 0
 #endif
 
-#define min(a,b) (((a) < (b)) ? (a) : (b))
-#define max(a,b) (((a) > (b)) ? (a) : (b))
-
 #include "shared/LL.h"
 
 /** A Menu is a MenuItem too.
